@@ -1,0 +1,35 @@
+local Class = createClass{name="Enums",bases={"base.Object"}};
+
+-- List of message type:
+Class.MSGTYPE_BALANCE_VALUE = 1
+
+
+-- Type of market:
+Class.MARKET_REAL 		= 0
+Class.MARKET_VIRTUAL 	= 1
+
+
+--[[
+Class: mt5.Enums
+
+List of enumerations for MT5
+
+This class inherits from <base.Object>.
+]]
+
+--[=[
+--[[
+Constructor: Enums
+
+Create a new instance of the class.
+
+Parameters:
+	 No parameter
+]]
+function Enums(options)
+]=]
+function Class:initialize(options)
+	-- Function body
+end
+
+return Class
