@@ -284,3 +284,4 @@ But we need the fix for issue #29 first.
 09/26/15-12:44:20: Working on issue #37: adding implementation for BinStream.
 09/28/15-23:02:14: Working on issue #43: added initial support for vstruct. Now Need to ass unit tests.
 10/01/15-12:18:06: Working on issue #39: Added support for telescope unit tests.
+10/01/15-14:17:34: Working on issue #43: added Message Handler class to support reading/writing messages on lua side.
